src/v8/CAPI_Lines.pas

UNIT CAPI_Lines;
{$inline on}

INTERFACE

USES CAPI_Utils;

PROCEDURE Lines_Get_AllNames(var ResultPtr: PPAnsiChar; ResultCount: PInteger);cdecl;
PROCEDURE Lines_Get_AllNames_GR();cdecl;
function Lines_Get_Bus1():PAnsiChar;cdecl;
function Lines_Get_Bus2():PAnsiChar;cdecl;
function Lines_Get_First():Integer;cdecl;
function Lines_Get_Length():Double;cdecl;
function Lines_Get_LineCode():PAnsiChar;cdecl;
function Lines_Get_Name():PAnsiChar;cdecl;
function Lines_Get_Next():Integer;cdecl;
function Lines_Get_Phases():Integer;cdecl;
function Lines_Get_R1():Double;cdecl;
function Lines_Get_X1():Double;cdecl;
function Lines_New(const Name: PAnsiChar):Integer;cdecl;
procedure Lines_Set_Bus1(const Value: PAnsiChar);cdecl;
procedure Lines_Set_Bus2(const Value: PAnsiChar);cdecl;
procedure Lines_Set_Length(Value: Double);cdecl;
procedure Lines_Set_LineCode(const Value: PAnsiChar);cdecl;
procedure Lines_Set_Name(const Value: PAnsiChar);cdecl;
procedure Lines_Set_Phases(Value: Integer);cdecl;
procedure Lines_Set_R1(Value: Double);cdecl;
procedure Lines_Set_X1(Value: Double);cdecl;
function Lines_Get_C0():Double;cdecl;
function Lines_Get_C1():Double;cdecl;
PROCEDURE Lines_Get_Cmatrix(var ResultPtr: PDouble; ResultCount: PInteger);cdecl;
PROCEDURE Lines_Get_Cmatrix_GR();cdecl;
function Lines_Get_R0():Double;cdecl;
PROCEDURE Lines_Get_Rmatrix(var ResultPtr: PDouble; ResultCount: PInteger);cdecl;
PROCEDURE Lines_Get_Rmatrix_GR();cdecl;
function Lines_Get_X0():Double;cdecl;
PROCEDURE Lines_Get_Xmatrix(var ResultPtr: PDouble; ResultCount: PInteger);cdecl;
PROCEDURE Lines_Get_Xmatrix_GR();cdecl;
procedure Lines_Set_C0(Value: Double);cdecl;
procedure Lines_Set_C1(Value: Double);cdecl;
procedure Lines_Set_Cmatrix(ValuePtr: PDouble; ValueCount: Integer);cdecl;
procedure Lines_Set_R0(Value: Double);cdecl;
procedure Lines_Set_Rmatrix(ValuePtr: PDouble; ValueCount: Integer);cdecl;
procedure Lines_Set_X0(Value: Double);cdecl;
procedure Lines_Set_Xmatrix(ValuePtr: PDouble; ValueCount: Integer);cdecl;
function Lines_Get_EmergAmps():Double;cdecl;
function Lines_Get_NormAmps():Double;cdecl;
procedure Lines_Set_EmergAmps(Value: Double);cdecl;
procedure Lines_Set_NormAmps(Value: Double);cdecl;
function Lines_Get_Geometry():PAnsiChar;cdecl;
procedure Lines_Set_Geometry(const Value: PAnsiChar);cdecl;
function Lines_Get_Rg():Double;cdecl;
function Lines_Get_Rho():Double;cdecl;
function Lines_Get_Xg():Double;cdecl;
procedure Lines_Set_Rg(Value: Double);cdecl;
procedure Lines_Set_Rho(Value: Double);cdecl;
procedure Lines_Set_Xg(Value: Double);cdecl;
PROCEDURE Lines_Get_Yprim(var ResultPtr: PDouble; ResultCount: PInteger);cdecl;
PROCEDURE Lines_Get_Yprim_GR();cdecl;
procedure Lines_Set_Yprim(ValuePtr: PDouble; ValueCount: Integer);cdecl;
function Lines_Get_NumCust():Integer;cdecl;
function Lines_Get_TotalCust():Integer;cdecl;
function Lines_Get_Parent():Integer;cdecl;
function Lines_Get_Count():Integer;cdecl;
function Lines_Get_Spacing():PAnsiChar;cdecl;
procedure Lines_Set_Spacing(const Value: PAnsiChar);cdecl;
function Lines_Get_Units():Integer;cdecl;
procedure Lines_Set_Units(Value: Integer);cdecl;

IMPLEMENTATION

USES CAPI_Constants, Line, DSSClassDefs, DSSGlobals, CktElement, uComplex, ExecHelper, Sysutils, ParserDel, Math, LineUnits;

Function IsLine(Const CktElem:TDSSCktElement):Boolean;

Begin
      Result := ((CktElem.DssObjtype AND CLASSMASK) = LINE_ELEMENT);
      If Not Result THEN
       DoSimpleMsg('Line Type Expected, but another found. Dss Class=' + CktElem.DSSClassName + CRLF +
       'Element name='+ CktElem.Name, 5007) ;
END;
//------------------------------------------------------------------------------
PROCEDURE Lines_Get_AllNames(var ResultPtr: PPAnsiChar; ResultCount: PInteger);cdecl;
VAR
  Result: PPAnsiCharArray;
  LineElem:TLineObj;
  k:Integer;

Begin
    Result := DSS_RecreateArray_PPAnsiChar(ResultPtr, ResultCount, (0) + 1);
    Result[0] := DSS_CopyStringAsPChar('NONE');
    IF ActiveCircuit[ActiveActor] <> Nil THEN
     WITH ActiveCircuit[ActiveActor] DO
     If Lines.ListSize>0 Then
     Begin
       DSS_RecreateArray_PPAnsiChar(Result, ResultPtr, ResultCount, (Lines.ListSize-1) + 1);
       k:=0;
       LineElem := Lines.First;
       WHILE LineElem<>Nil DO
       Begin
          Result[k] := DSS_CopyStringAsPChar(LineElem.Name);
          Inc(k);
          LineElem := Lines.Next;
       End;
     End;

end;
PROCEDURE Lines_Get_AllNames_GR();cdecl;
// Same as Lines_Get_AllNames but uses global result (GR) pointers
begin
   Lines_Get_AllNames(GR_DataPtr_PPAnsiChar, GR_CountPtr_PPAnsiChar)
end;

//------------------------------------------------------------------------------
function Lines_Get_Bus1_AnsiString():AnsiString;inline;
begin
  Result := '';
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN If IsLine(ActiveCircuit[ActiveActor].ActiveCktElement)
  THEN Begin
       Result := ActiveCircuit[ActiveActor].ActiveCktElement.GetBus(1);
  End

end;

function Lines_Get_Bus1():PAnsiChar;cdecl;
begin
    Result := DSS_GetAsPAnsiChar(Lines_Get_Bus1_AnsiString());
end;
//------------------------------------------------------------------------------
function Lines_Get_Bus2_AnsiString():AnsiString;inline;
begin
  Result := '';
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN If IsLine(ActiveCircuit[ActiveActor].ActiveCktElement)
  THEN Begin
       Result := ActiveCircuit[ActiveActor].ActiveCktElement.GetBus(2);
  End
end;

function Lines_Get_Bus2():PAnsiChar;cdecl;
begin
    Result := DSS_GetAsPAnsiChar(Lines_Get_Bus2_AnsiString());
end;
//------------------------------------------------------------------------------
function Lines_Get_First():Integer;cdecl;
Var
   pLine:TLineObj;

Begin

   Result := 0;
   If ActiveCircuit[ActiveActor] <> Nil Then
   Begin
        pLine := ActiveCircuit[ActiveActor].Lines.First;
        If pLine <> Nil Then
        Begin
          Repeat
            If pLine.Enabled
            Then Begin
              ActiveCircuit[ActiveActor].ActiveCktElement := pLine;
              Result := 1;
            End
            Else pLine := ActiveCircuit[ActiveActor].Lines.Next;
          Until (Result = 1) or (pLine = nil);
        End
        Else
            Result := 0;  // signify no more
   End;

end;
//------------------------------------------------------------------------------
function Lines_Get_Length():Double;cdecl;
begin
  Result := 0.0;
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN If IsLine(ActiveCircuit[ActiveActor].ActiveCktElement)
  THEN Begin
       Result := TLineObj(ActiveCircuit[ActiveActor].ActiveCktElement).Len;
  End
end;
//------------------------------------------------------------------------------
function Lines_Get_LineCode_AnsiString():AnsiString;inline;
begin
  Result := '';
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN If IsLine(ActiveCircuit[ActiveActor].ActiveCktElement)
  THEN Begin
       Result := TLineObj(ActiveCircuit[ActiveActor].ActiveCktElement).CondCode;
  End

end;

function Lines_Get_LineCode():PAnsiChar;cdecl;
begin
    Result := DSS_GetAsPAnsiChar(Lines_Get_LineCode_AnsiString());
end;
//------------------------------------------------------------------------------
function Lines_Get_Name_AnsiString():AnsiString;inline;
Var
   pLine:TDSSCktElement;

Begin
   Result := '';  // signify no name
   If ActiveCircuit[ActiveActor] <> Nil Then
   Begin
        pLine := ActiveCircuit[ActiveActor].ActiveCktElement;
        If pLine <> Nil Then
        Begin
          Result := pLine.Name;
        End;
   End;

end;

function Lines_Get_Name():PAnsiChar;cdecl;
begin
    Result := DSS_GetAsPAnsiChar(Lines_Get_Name_AnsiString());
end;
//------------------------------------------------------------------------------
function Lines_Get_Next():Integer;cdecl;
Var
   pLine:TLineObj;

Begin

   Result := 0;
   If ActiveCircuit[ActiveActor] <> Nil Then
   Begin
        pLine := ActiveCircuit[ActiveActor].Lines.Next;
        If pLine <> Nil Then
        Begin
          Repeat
            If pLine.Enabled
            Then Begin
              ActiveCircuit[ActiveActor].ActiveCktElement := pLine;
              Result := ActiveCircuit[ActiveActor].Lines.ActiveIndex;
            End
            Else pLine := ActiveCircuit[ActiveActor].Lines.Next;
          Until (Result > 0) or (pLine = nil);
        End
        Else
            Result := 0;  // signify no more
   End;

end;
//------------------------------------------------------------------------------
function Lines_Get_Phases():Integer;cdecl;
begin
  Result := 0;
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN If IsLine(ActiveCircuit[ActiveActor].ActiveCktElement)
  THEN Begin
       Result := ActiveCircuit[ActiveActor].ActiveCktElement.Nphases;
  End

end;
//------------------------------------------------------------------------------
function Lines_Get_R1():Double;cdecl;
begin
  Result := 0.0;
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN If IsLine(ActiveCircuit[ActiveActor].ActiveCktElement)
  THEN With TLineObj(ActiveCircuit[ActiveActor].ActiveCktElement) Do Begin
       Result := R1/UnitsConvert;
  End;

end;
//------------------------------------------------------------------------------
function Lines_Get_X1():Double;cdecl;
begin
  Result := 0.0;
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN If IsLine(ActiveCircuit[ActiveActor].ActiveCktElement)
  THEN With TLineObj(ActiveCircuit[ActiveActor].ActiveCktElement) Do Begin
       Result := X1/UnitsConvert;
  End;

end;
//------------------------------------------------------------------------------
function Lines_New(const Name: PAnsiChar):Integer;cdecl;
begin
      Result := AddObject('line', Name);    // Returns handle to object
end;
//------------------------------------------------------------------------------
procedure Lines_Set_Bus1(const Value: PAnsiChar);cdecl;
begin
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN If IsLine(ActiveCircuit[ActiveActor].ActiveCktElement)
  THEN Begin
       WITH TLineObj(ActiveCircuit[ActiveActor].ActiveCktElement) Do Begin
         SetBus(1, Value);
       END;
  End;
end;
//------------------------------------------------------------------------------
procedure Lines_Set_Bus2(const Value: PAnsiChar);cdecl;
begin
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN If IsLine(ActiveCircuit[ActiveActor].ActiveCktElement)
  THEN Begin
       WITH TLineObj(ActiveCircuit[ActiveActor].ActiveCktElement) Do Begin
         SetBus(2, Value);
       END;
  End;
end;
//------------------------------------------------------------------------------
procedure Lines_Set_Length(Value: Double);cdecl;
begin
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN If IsLine(ActiveCircuit[ActiveActor].ActiveCktElement)
  THEN Begin
       WITH TLineObj(ActiveCircuit[ActiveActor].ActiveCktElement) Do Begin
         Len := Value;
         YprimInvalid[ActiveActor] := True;
       END;
  End;
end;
//------------------------------------------------------------------------------
procedure Lines_Set_LineCode(const Value: PAnsiChar);cdecl;
begin
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN If IsLine(ActiveCircuit[ActiveActor].ActiveCktElement)
  THEN Begin
       With TLineObj(ActiveCircuit[ActiveActor].ActiveCktElement) DO Begin
         FetchLineCode(Value);
         YprimInvalid[ActiveActor] := True;
       End;
  End;

end;
//------------------------------------------------------------------------------
procedure Lines_Set_Name(const Value: PAnsiChar);cdecl;
VAR
    activesave :integer;
    pLine:TLineObj;
    S: String;
    Found :Boolean;
Begin

